@@ -1,4 +1,4 @@
-package com.nhl.link.etl.transform;
+package com.nhl.link.etl.load;
 
 public enum RelationshipType {
 	TO_ONE, TO_MANY
